# vibar

./: .session  AGENTS.md  Cargo.toml  LICENSE  Makefile  PLAYERCTL_WORK_ORDER.md  README.md  SESSION_NOTES.md  config.jsonc  style.css
.codex/skills/personal-config-edits/: SKILL.md
.codex/skills/personal-config-edits/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
docs/: developer.md  modules.md  plan-monitor-disconnect-cleanup.md  playerctl_carousel_spec.md
plans/: codebase-improvements.md
scripts/: build.sh  install-deps.sh
src/: config.rs  main.rs  style.rs
src/modules/: backlight.rs  battery.rs  broadcaster.rs  clock.rs  cpu.rs  disk.rs  exec.rs  group.rs  memory.rs  mod.rs  playerctl.rs  pulseaudio.rs  temperature.rs  tray.rs
src/modules/playerctl/: backend.rs  config.rs  mod.rs  model.rs  ui.rs
src/modules/pulseaudio/: backend.rs  config.rs  format.rs  mod.rs  ui.rs
src/modules/sway/: ipc.rs  mod.rs  mode.rs  window.rs  workspace.rs  workspaces.rs
src/modules/tray/: menu_dbus.rs  menu_ui.rs  mod.rs  sni.rs  types.rs
