[package]
name = "mybar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gio = "0.21"
glib = "0.21"
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.7"
json5 = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swayipc = "4"
