[package]
name = "vibar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gio = "0.22"
glib = "0.22"
gtk = { package = "gtk4", version = ">=0.10, <0.12" }
gtk4-layer-shell = ">=0.7, <0.9"
json5 = "1.3"
libc = "0.2"
libpulse-binding = "2.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swayipc = "4"
udev = "0.9"
zbus = "5.14"
